# stream-proxy

./: .gitignore  README.rst  TODO  hls_restreamer.py  index-hlsjs.html  index-videojs.html  index.html  pyproject.toml  restreamer.sh  setup.py  stream-proxy.1  stream-proxy.service
chromium/: python3-stream-proxy.json
debian/: changelog  control  python3-stream-proxy.install  python3-stream-proxy.manpages  python3-stream-proxy.service  rules
hls_restreamer/: __main__.py  http_handler.py  inputs.py  outputs.py
html_dir/: index-hlsjs.html  index-videojs.html
stream_proxy/: __init__.py  __main__.py  http_handler.py  inputs.py  outputs.py
stream_proxy/http_resources/: __init__.py  index.html
