[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stream_proxy"
author = "Mike Abrahall"
home-page = "https://github.com/cyberitsolutions/stream-proxy"
description-file = "README.rst"
# May be fine with older versions, but I've no intention of testing how far back it goes.
requires-python = ">=3.5"
# FIXME: Should change the code so this can be an "extras" requirement, as the code can be used without a systemd unit.
requires = ["systemd-python"]

[tool.flit.entrypoints.console_scripts]
# Shouldn't I be using tools.flit.scripts instead?
# That didn't seem to have any effect, but why?
stream-proxy = "stream_proxy:__main__"
